Added a route for performing bulk checkIns
Bulk checkIns do not need to be grouped by events and are accepted much like how regular checkIns are performed.

Also fixed bug that prevented managers and attendees from being added to Elastic.
