# lib/controllers/routes/events.js
@@ -17,13 +17,13 @@ router.use(redisMiddleware);
  *
  * Full path : /events/create
  **/
-router.post('/create', function(req, res){
+router.post('/create', (req, res) => {
   eventsService.createEvent({
     'eventData' : req.body,
     'user' : req.user
-  }).then(function(result){
+  }).then((result) => {
     res.send(result);
-  }).catch(function(error){
+  }).catch((error) => {
     res.status(error.status).send(error);
   });
 });
@@ -32,13 +32,13 @@ router.post('/create', function(req, res){
  *
  * Full path : /events/update
  **/
-router.post('/update', function(req, res){
+router.post('/update', (req, res) => {
   eventsService.updateEvent({
     'eventData' : req.body,
     'user' : req.user
-  }).then(function(result){
+  }).then((result) => {
       res.send(result);
-  }).catch(function(error){
+  }).catch((error) => {
       res.status(error.status).send(error);
   });
 });
@@ -47,13 +47,13 @@ router.post('/update', function(req, res){
  *
  * Full path : /events/remove
  **/
-router.post('/remove', function(req, res){
+router.post('/remove', (req, res) => {
   eventsService.removeEvent({
     'eventID' : req.body.eventID,
     'user' : req.user
-  }).then(function(result){
+  }).then((result) => {
     res.send(result);
-  }).catch(function(error){
+  }).catch((error) => {
     res.status(error.status).send(error);
   });
 });
@@ -63,15 +63,15 @@ router.post('/remove', function(req, res){
  *
  * Full path : /events/managing
  **/
-router.get('/managing', function(req, res){
+router.get('/managing', (req, res) => {
   eventsService.getEventsManaging({
     'user' : req.user,
     'limit' : req.query.limit,
     'page' : req.query.page,
     'upcoming' : req.query.upcoming
-  }).then(function(result){
+  }).then((result) => {
     res.send(result);
-  }).catch(function(error){
+  }).catch((error) => {
     res.status(error.status).send(error);
   });
 });
@@ -80,14 +80,14 @@ router.get('/managing', function(req, res){
  *
  * Full path : /events/attending
  **/
-router.get('/attending', function(req, res){
+router.get('/attending', (req, res) => {
   eventsService.getEventsAttending({
     'user' : req.user,
     'limit' : req.query.limit,
     'page' : req.query.page
-  }).then(function(result){
+  }).then((result) => {
     res.send(result);
-  }).catch(function(error){
+  }).catch((error) => {
     res.status(error.status).send(error);
   });
 });
@@ -96,16 +96,16 @@ router.get('/attending', function(req, res){
  *
  * Full path : /events/public
  **/
-router.get('/public', function(req, res){
+router.get('/public', (req, res) => {
   res.set({'Content-Type' : 'application/json'});
   eventsService.getPublicEvents({
     'user' : req.user,
     'limit' : req.query.limit,
     'page' : req.query.page,
     'upcoming' : req.query.upcoming
-  }).then(function(result){
+  }).then((result) => {
     res.send(result);
-  }).catch(function(error){
+  }).catch((error) => {
     res.status(error.status).send(error);
   });
 });
@@ -115,17 +115,17 @@ router.get('/public', function(req, res){
  *
  * Full path : /events/private
  **/
-router.get('/private', function(req, res){
+router.get('/private', (req, res) => {
   var time = Date.now();
   eventsService.getPrivateEvents({
     'user' : req.user,
     'limit' : req.query.limit,
     'page' : req.query.page,
     'upcoming' : req.query.upcoming
-  }).then(function(result){
+  }).then((result) => {
     //console.log(Date.now() - time);
     res.send(result);
-  }).catch(function(error){
+  }).catch((error) => {
     res.status(error.status).send(error);
   });
 });
@@ -135,15 +135,15 @@ router.get('/private', function(req, res){
  *
  * Full path : /events/managers
  **/
-router.get('/getManagers', function(req, res){
+router.get('/getManagers', (req, res) => {
   res.set({'Content-Type' : 'application/json'});
    eventsService.getEventManagers({
      'eventID' : req.query.eventID,
      'limit' : req.query.limit,
      'page' : req.query.page
-   }).then(function(result){
+   }).then((result) => {
      res.send(reuslt);
-   }).catch(function(error){
+   }).catch((error) => {
      res.status(error.status).send(error);
    });
  });
@@ -152,14 +152,14 @@ router.get('/getManagers', function(req, res){
  *
  * Full path : /events/attendees
  **/
-router.get('/getEventCheckIns', function(req, res){
+router.get('/getEventCheckIns', (req, res) => {
   eventsService.getEventCheckIns({
     'eventID' : req.query.eventID,
     'limit' : req.query.limit,
     'page' : req.query.page
-  }).then(function(result){
+  }).then((result) => {
     res.send(result);
-  }).catch(function(error){
+  }).catch((error) => {
     res.status(error.status).send(error);
   });
  });
@@ -168,19 +168,19 @@ router.get('/getEventCheckIns', function(req, res){
   *
   * Full path : /events/attendees
   **/
- router.get('/getEvents', function(req, res){
+ router.get('/getEvents', (req, res) => {
    eventsService.getEvents({
      'after' : req.query.after,
      'before' : req.query.before,
      'user' : req.user
-   }).then(function(result){
+   }).then((result) => {
      res.send(result);
-   }).catch(function(error){
+   }).catch((error) => {
      res.status(error.status).send(error);
    });
  });
 
- router.get('/searchEvents', function(req, res){
+ router.get('/searchEvents', (req, res) => {
    var time = Date.now();
    eventsService.searchEvents({
      'query' : req.query.query,
@@ -192,15 +192,15 @@ router.get('/getEventCheckIns', function(req, res){
      'private' : req.query.private,
      'upcoming' : req.query.upcoming,
      'sortOrder' : req.query.sortOrder
-   }).then(function(result){
+   }).then((result) => {
      console.log(Date.now() - time);
      res.send(result);
-   }).catch(function(error){
+   }).catch((error) => {
      res.status(500).send(error);
    });
  });
 
- router.get('/searchAttendees', function(req, res){
+ router.get('/searchAttendees', (req, res) => {
    eventsService.searchCheckIns({
      'eventID' : req.query.eventID,
      'query' : req.query.query,
@@ -209,9 +209,9 @@ router.get('/getEventCheckIns', function(req, res){
      'page' : req.query.page,
      'fields' : req.query.fields,
      'inviteStatuses' : req.query.inviteStatuses
-   }).then(function(result){
+   }).then((result) => {
      res.send(result);
-   }).catch(function(error){
+   }).catch((error) => {
      res.status(error.status).send(error);
    });
  });
@@ -222,14 +222,14 @@ router.get('/getEventCheckIns', function(req, res){
   * body needs to have eventID, and a checkIn object which has a the checkIn's
   * name, personID, orgGuid, and
   **/
- router.post('/addPrivateAttendee', function(req, res){
+ router.post('/addPrivateAttendee', (req, res) => {
    eventsService.addPrivateAttendee({
      'eventID' : req.body.eventID,
      'user' : req.user,
      'attendee' : req.body.attendee
-   }).then(function(result){
+   }).then((result) => {
      res.send(result);
-   }).catch(function(error){
+   }).catch((error) => {
      res.status(error.status).send(error);
    });
  });
@@ -240,14 +240,14 @@ router.get('/getEventCheckIns', function(req, res){
   * body needs to have eventID, and a manager object which has a the checkIn's
   * name, personID, orgGuid, and
   **/
- router.post('/addEventManager', function(req, res){
+ router.post('/addEventManager', (req, res) => {
    eventsService.addEventManager({
      'eventID' : req.body.eventID,
      'user' : req.user,
      'newManager' : req.body.manager
-   }).then(function(result){
+   }).then((result) => {
      res.send(result);
-   }).catch(function(error){
+   }).catch((error) => {
      res.status(error.status).send(error);
    });
  });
@@ -258,14 +258,14 @@ router.get('/getEventCheckIns', function(req, res){
   * body needs to have eventID, and a checkIn object which has a the checkIn's
   * name, personID, orgGuid, and timestamp
   **/
- router.post('/removePrivateAttendee', function(req, res){
+ router.post('/removePrivateAttendee', (req, res) => {
    eventsService.removeAttendee({
      'eventID' : req.body.eventID,
      'user' : req.user,
      'personID' : req.body.personID
-   }).then(function(result){
+   }).then((result) => {
      res.send(result);
-   }).catch(function(error){
+   }).catch((error) => {
      res.status(error.status).send(error);
    });
  });
@@ -275,27 +275,41 @@ router.get('/getEventCheckIns', function(req, res){
  * body needs to have eventID, and a checkIn object which has a the checkIn's
  * name, personID, orgGuid, and timestamp
  **/
-router.post('/checkIn', function(req, res){
+router.post('/checkIn', (req, res) => {
   eventsService.checkIntoEvent({
     'eventID' : req.body.eventID,
     'user' : req.user,
     'checkIn' : req.body.checkIn
-  }).then(function(result){
+  }).then((result) => {
     res.send(result);
-  }).catch(function(error){
+  }).catch((error) => {
     res.status(error.status).send(error);
   });
 });
 
-
+/**
+ * Route for performing bulk checkIns
+ *
+ * body needs to contain a field called 'checkIns' that contains an array of checkIns
+ **/
+router.post('/bulkCheckIn', (req, res) => {
+  eventsService.bulkCheckIn({
+    'user' : req.user,
+    'checkInArray' : req.body.checkIns
+  }).then((result) => {
+    res.send(result);
+  }).catch((error) => {
+    res.status(error.status).send(error);
+  });
+});
  /**
   * Route for uploading images, adds the uploaded image to the event in the DB,
   * event needs to be sent using query
   **/
- router.post('/uploadImage', busboy({'immediate' : true}), function(req, res){
+ router.post('/uploadImage', busboy({'immediate' : true}), (req, res) => {
    var fileAvailable = false, complete = false;
    if(req.busboy){
-     req.busboy.on('file', function(fieldname, file, filename, encoding, mimeType){
+     req.busboy.on('file', (fieldname, file, filename, encoding, mimeType) => {
        if(fieldname != 'file'){
          fileAvailable = false;
        }
@@ -307,15 +321,15 @@ router.post('/checkIn', function(req, res){
            'file' : file,
            'encoding' : encoding,
            'mimeType' : mimeType
-         }).then(function(result){
+         }).then((result) => {
            complete = true;
            res.send(result);
-         }).catch(function(error){
+         }).catch((error) => {
            res.status(error.status).send(error);
          });
        }
      });
-     req.busboy.on('finish', function(){
+     req.busboy.on('finish', () => {
         if(fileAvailable === false && !complete){
           complete = true;
           res.status(400).send(errorResponses.NO_FILE_SPECIFIED);
