# lib/models/dao/ElasticDao.js
@@ -11,7 +11,7 @@ var producer = require('lib/models/dao/kafkaProducer');
  **/
 elasticClient.indices.create({
   'index' : 'eventdb'
-}, function(){
+}, () => {
   elasticClient.indices.putMapping({
     'index': 'eventdb',
     'type':'checkin',
@@ -70,7 +70,7 @@ elasticClient.indices.create({
 
 class ElasticDao {
   getEvents(options){
-    return new Promise(function(resolve, reject){
+    return new Promise((resolve, reject) => {
       var searchOptions = {
         'index' : 'eventdb',
         'body' : {
@@ -131,15 +131,15 @@ class ElasticDao {
          }
         }
       };
-      elasticClient.search(searchOptions).then(function(result){
+      elasticClient.search(searchOptions).then((result) => {
         resolve(result);
-      }).catch(function(error){
+      }).catch((error) => {
         reject(error)
       });
     });
   }
   searchEvents(options){
-    return new Promise(function(resolve, reject){
+    return new Promise((resolve, reject) => {
       var time = Date.now();
       var regexQuery = {'query_string': {
         'fields': options.fields,
@@ -256,10 +256,10 @@ class ElasticDao {
          }
         });
       }
-      elasticClient.search(searchOptions).then(function(result){
+      elasticClient.search(searchOptions).then((result) => {
         console.log(Date.now() - time);
         resolve(result);
-      }).catch(function(error){
+      }).catch((error) => {
         console.log(error);
         reject(error)
       });
@@ -301,7 +301,7 @@ class ElasticDao {
   }
 
   insertEventAndCheckIn(options){
-    return new Promise(function(resolve, reject){
+    return new Promise((resolve, reject) => {
       var event = options.event;
       var checkIn = options.checkIn;
       producer.send([{
@@ -310,7 +310,7 @@ class ElasticDao {
           JSON.stringify({'action' : 'create' , 'index' : 'eventdb', 'type' : 'event', 'id' : event.id, 'body' : event}),
           JSON.stringify({'action' : 'create' , 'index' : 'eventdb', 'type' : 'checkin', 'id' : checkIn.id, 'body' : checkIn}),
         ]
-      }], function(err, response){
+      }], (err, response) => {
         if(err)
           reject(err);
         else
@@ -319,13 +319,13 @@ class ElasticDao {
     });
   }
   upsertCheckIn(checkIn){
-    return new Promise(function(resolve, reject){
+    return new Promise((resolve, reject) => {
       producer.send([{
         'topic' : 'event',
         'messages' : [
           JSON.stringify({'action' : 'update' , 'index' : 'eventdb', 'type' : 'checkin', 'id' : checkIn.id, 'body' : checkIn}),
         ]
-      }], function(err, response){
+      }], (err, response) => {
         if(err)
           reject(err);
         else
@@ -334,13 +334,13 @@ class ElasticDao {
     });
   }
   removeEvent(eventID){
-    return new Promise(function(resolve, reject){
+    return new Promise((resolve, reject) => {
       producer.send([{
         'topic' : 'event',
         'messages' : [
           JSON.stringify({'action' : 'delete' , 'index' : 'eventdb', 'type' : 'event', 'id' : eventID}),
         ]
-      }], function(err, response){
+      }], (err, response) => {
         if(err)
           reject(err);
         else
@@ -349,8 +349,8 @@ class ElasticDao {
     });
   }
   deleteCheckIns(eventID){
-    return new Promise(function(resolve, reject){
-      eventDao.getCheckInIDsByEvent(eventID).then(function(results){
+    return new Promise((resolve, reject) => {
+      eventDao.getCheckInIDsByEvent(eventID).then((results) => {
         if(results.length > 0){
           var messages = [];
           for(var i = 0; i < results.length; i++){
@@ -364,7 +364,7 @@ class ElasticDao {
           producer.send([{
             'topic' : 'event',
             'messages' : messages
-          }], function(err, response){
+          }], (err, response) => {
             if(err)
               reject(err);
             else
@@ -378,7 +378,7 @@ class ElasticDao {
     });
   }
   bulkUpdateEventAndCheckIns(event){
-    return new Promise(function(resolve, reject){
+    return new Promise((resolve, reject) => {
       delete event._id;
       delete event.eventID;
       var updatedCheckInData = {
@@ -392,7 +392,7 @@ class ElasticDao {
         'imageUrl' : event.imageUrl,
         'thumbnailUrl' : event.thumbnailUrl
       };
-      eventDao.getCheckInIDsByEvent(event.id).then(function(results){
+      eventDao.getCheckInIDsByEvent(event.id).then((results) => {
         var messages = [];
         // update event
         messages.push(JSON.stringify({
@@ -404,7 +404,6 @@ class ElasticDao {
         }));
         console.log(results);
         if(results.length > 0){
-
           // update all checkIns
           for(var i = 0; i < results.length; i++){
             messages.push(JSON.stringify({
@@ -419,13 +418,39 @@ class ElasticDao {
         producer.send([{
           'topic' : 'event',
           'messages' : messages
-        }], function(err, response){
+        }], (err, response) => {
           if(err)
             reject(err);
           else
             resolve(response);
         });
       })
+    });
+  }
+  bulkUpdateCheckIns(options){
+    return new Promise((resolve, reject) =>{
+      var messages = [];
+      options.checkIns.forEach((checkIn) => {
+        messages.push(JSON.stringify({
+            'action' : 'update',
+            'index' : 'eventdb',
+            'type' : 'checkin',
+            'id' : checkIn.id,
+            'body' : checkIn
+        }));
+      });
+      producer.send([{
+        'topic' : 'event',
+        'messages' : messages
+      }], (err, response) => {
+        console.log(err);
+        console.log(response);
+        console.log(messages);
+        if(err)
+          reject(err);
+        else
+          resolve(response);
+      });
     });
   }
 }
